--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,3 +13,11 @@
         }
     ]
 }
+{
+    "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+    }
+  }
